--- a/src/index.css
+++ b/src/index.css
@@ -12,28 +12,50 @@ a {
 }
 
 body {
-  /* min-width: 320px;
-  width: 100%;
-  min-height: 100vh;
-  height: 100vh; */
   font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.28;
+  color: var(--color-dark);
+  background-color: var(--color-light);
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-weight: 700;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: clamp(43px, 4.1666666667vw, 60px);
+}
+
+h2 {
+  font-size: clamp(24px, 2.7777777778vw, 38px);
+}
+
+h3 {
+  font-size: clamp(26px, 2.0833333333vw, 30px);
+}
+
+h4 {
+  font-size: clamp(18px, 1.3888888889vw, 20px);
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-  width: 100%;
-  max-width: 1200px;
+  /* width: 100%; */
+  max-width: 1220px;
   margin: 0 auto;
 
   min-height: 100vh;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 
   padding-top: 20px;
   padding-left: 16px;
