--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -19,4 +19,16 @@
   border: 2px solid var(--color-violet);
   padding: 10px;
   border-radius: 20px;
+  transition: all 0.3s ease;
+}
+
+.btnTry:hover {
+  background-color: var(--color-violet);
+  color: var(--color-white);
+}
+
+.btnTry:active {
+  background-color: var(--color-dark-gray);
+  border-color: var(--color-dark-gray);
+  color: var(--color-white);
 }
