--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,19 +10,11 @@
 }
 
 .headerContainer {
-  /* fix nav on top */
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  background-color: var(--color-white);
-
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* position: relative;*/
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
-  transition: box-shadow 0.3s ease;
+  position: relative;
 }
 .rightSide {
   display: flex;
