--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --color-dark-gray: #3b3b3b;
   --color-violet: #640d5f;
   --color-light-violet: #871280;
+  --color-lightest-violet: #b562b0;
 }
 
 a {
