--- a/src/pages/Form/Form.module.css
+++ b/src/pages/Form/Form.module.css
@@ -41,6 +41,105 @@
   opacity: 0.5;
 }
 
+/* Animal */
+
+.animalWithTooltip {
+  position: relative;
+}
+
+.labelWithButton {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  margin-bottom: 4px;
+  position: relative;
+}
+
+.tooltipButton {
+  background: none;
+  border: none;
+  font-size: 1rem;
+  width: 25px;
+  aspect-ratio: 1;
+  background-color: var(--color-lightest-violet);
+  border-radius: 50%;
+  color: var(--color-white);
+  cursor: pointer;
+}
+
+.tooltipBox {
+  position: absolute;
+  top: -60px;
+  left: 0;
+  background-color: #333;
+  color: var(--color-white);
+  padding: 8px;
+  border-radius: 4px;
+  z-index: 10;
+  width: 260px;
+  font-size: 0.85rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+.animalChoiceGroup {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 0.5rem;
+  justify-content: center;
+}
+
+.animalChoiceInput {
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.animalChoiceInput:checked + .animalChoiceSpan {
+  box-shadow: 0 0 0 0.0625em var(--color-violet);
+  background-color: #ffdefe;
+  border-right: 0.5px solid var(--color-violet);
+  z-index: 1;
+  color: var(--color-violet);
+}
+
+.animalChoiceLabel {
+  position: relative;
+}
+
+.animalChoiceSpan {
+  display: block;
+  cursor: pointer;
+  background-color: #fff;
+  padding: 0.375em 0.75em;
+  margin-left: 0.0625em;
+  box-shadow: 0 0 0 0.0625em #d3b5d9;
+  letter-spacing: 0.05em;
+  color: #5a3e63;
+  text-align: center;
+  transition: background-color 0.5s ease;
+}
+
+.animalChoiceLabel:first-child .animalChoiceSpan {
+  border-radius: 0.375em 0 0 0.375em;
+}
+
+.animalChoiceLabel:last-child .animalChoiceSpan {
+  border-radius: 0 0.375em 0.375em 0;
+}
+
+/* Persentage */
+
+.percentageWrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .radioWrapper {
   display: flex;
   flex-direction: row;
@@ -60,7 +159,6 @@
   font-weight: 500;
   position: relative;
   overflow: hidden;
-  margin-bottom: 0.375em;
 }
 
 .radioPersentageInput {
@@ -102,4 +200,35 @@
 
 .radioPersentageInput:checked + .fakeRadio::before {
   box-shadow: inset 0 0 0 0.4375em var(--color-violet);
+}
+
+/* Size */
+.sizeWrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/* Video */
+
+.video {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.videoInput {
+  padding: 0.75rem 1rem;
+  border: 2px solid #ccc;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: border-color 0.2s ease, background-color 0.2s ease;
+  font-family: inherit;
+  font-size: 1rem;
+}
+
+.videoInput:hover {
+  border-color: #414181;
+  background-color: #f0f0ff;
 }
