--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -32,3 +32,9 @@
   border-color: var(--color-dark-gray);
   color: var(--color-white);
 }
+
+@media (max-width: 660px) {
+  .text {
+    display: none;
+  }
+}
