--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,13 @@
 .footerWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   border-top: 1px solid var(--color-light-violet);
+  padding: 20px;
+  margin-top: 20px;
 }
 
 .logo {
-  width: 70px;
-  height: 70px;
+  width: 100px;
+  height: 100px;
 }
