--- a/src/components/OurTeam/OurTeam.module.css
+++ b/src/components/OurTeam/OurTeam.module.css
@@ -1,7 +1,8 @@
 .wrapper {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 1.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
   padding: 20px;
 }
 
