--- a/src/components/ContactUs/ContactUs.module.css
+++ b/src/components/ContactUs/ContactUs.module.css
@@ -6,10 +6,20 @@
   gap: 20px;
 }
 
+.title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 .formDescription {
   width: 50%;
   text-align: center;
   padding: 20px;
+}
+
+.img {
+  width: 300px;
+  height: 300px;
 }
 
 .form {
