--- a/src/components/ContactUs/ContactUs.module.css
+++ b/src/components/ContactUs/ContactUs.module.css
@@ -8,11 +8,11 @@
 
 .title {
   text-align: center;
-  margin-bottom: 20px;
+  padding: 20px;
 }
 
 .formDescription {
-  width: 50%;
+  width: 40%;
   text-align: center;
   padding: 20px;
 }
@@ -23,7 +23,7 @@
 }
 
 .form {
-  width: 50%;
+  width: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
