--- a/src/components/OurTeam/OurTeam.module.css
+++ b/src/components/OurTeam/OurTeam.module.css
@@ -3,9 +3,16 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
-  padding: 20px;
+  padding: 20px 0;
 }
 
 .title {
+  margin-top: 20px;
   text-align: center;
+}
+.advisors {
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: hsl(from var(--color-lightest-violet) h s l / 0.1);
+  border-radius: 24px;
+  padding: 7px 15px;
 }
