--- a/src/components/OurTeamItems/OurTeamItems.module.css
+++ b/src/components/OurTeamItems/OurTeamItems.module.css
@@ -7,7 +7,7 @@
 
 .name {
   color: var(--color-violet);
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .image {
@@ -16,4 +16,9 @@
   max-width: 100%;
   height: auto;
   display: block;
+}
+
+.link {
+  color: var(--color-violet);
+  text-decoration: underline;
 }
