--- a/src/components/PublicationsItem/PublicationsItem.module.css
+++ b/src/components/PublicationsItem/PublicationsItem.module.css
@@ -2,4 +2,25 @@
   padding: 20px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 25px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+
+.name {
+  font-weight: 700;
+  font-size: 20px;
+  padding-bottom: 10px;
+}
+
+.autors {
+  font-size: 14px;
+}
+
+.article {
+  color: var(--color-violet);
+  text-decoration: underline;
 }
