--- a/src/components/ContactUs/ContactUs.module.css
+++ b/src/components/ContactUs/ContactUs.module.css
@@ -14,13 +14,21 @@
 .formDescription {
   width: 40%;
   text-align: center;
-  padding: 20px;
+  /* padding: 20px; */
 }
 
 .img {
-  width: 300px;
-  height: 300px;
+  /* width: 300px; */
+  width: 80%;
+  /* height: 300px; */
 }
+
+/*--------------uncomment if cat not need on mobile form------------------*/
+/* @media (max-width: 616px) {
+  .img {
+    display: none;
+  }
+} */
 
 .form {
   width: 60%;
