--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -70,26 +70,6 @@
   color: var(--color-black);
 }
 
-/* Mobile */
-
-@media (max-width: 660px) {
-  .navContainer {
-    flex-direction: column;
-    align-items: center;
-    gap: 16px;
-    width: 100%;
-  }
-
-  .navItems {
-    font-size: 18px;
-    padding: 8px 0;
-  }
-
-  .headerWrapper {
-    width: 40%;
-  }
-}
-
 .btn {
   width: 95px;
   text-transform: uppercase;
@@ -175,7 +155,7 @@
   .rightSide {
     width: 60%;
     display: flex;
-    justify-content: space-between;
+    justify-content: end;
     align-items: center;
   }
 
@@ -218,5 +198,29 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+/* Mobile */
+
+@media (max-width: 660px) {
+  .navContainer {
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    width: 100%;
+  }
+
+  .navItems {
+    font-size: 18px;
+    padding: 8px 0;
+  }
+
+  .headerWrapper {
+    width: 40%;
+  }
+
+  .btn {
+    display: none;
   }
 }
