--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
   --color-lightest-violet: #b562b0;
 }
 
+* {
+  outline: 1px solid red;
+}
+
 a {
   text-decoration: inherit;
 }
@@ -22,6 +26,7 @@ body {
   color: var(--color-dark);
   background-color: var(--color-light);
   min-height: 100vh;
+  height: 100%;
 }
 
 h1,
@@ -55,11 +60,21 @@ p {
 }
 
 .container {
-  /* width: 100%; */
+  width: 100%;
+
+  height: 100%;
+  position: relative;
   max-width: 1220px;
   margin: 0 auto;
 
-  padding-top: 20px;
+  /* padding-top: 20px;
   padding-left: 16px;
-  padding-right: 16px;
+  padding-right: 16px; */
+}
+
+.layout {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
 }
